--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+# Mac OS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+desktop.ini
+
 ### STS ###
 .apt_generated
 .classpath
